<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nUtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/nuevaUnidad_titulo"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/nUtU"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_weight="0.33"
                android:gravity="end"
                android:text="@string/nuevaUnidad_tipo"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sp2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/nUnom"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:gravity="end"
                android:text="@string/nuevaUnidad_nombre"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/nUab"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:gravity="end"
                android:text="@string/nuevaUnidad_ab"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nuevaUnidad_ejemplo"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv6"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/nuevaUnidad_ref"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" >

                
            </EditText>

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/miUnidad_ayuda"
                android:onClick="lanzarAyuda"
                android:src="@drawable/question_blue" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnNuevaUnidad"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:drawableLeft="@drawable/tick1"
        android:onClick="altaMiUnidad"
        android:text="@string/nuevaUnidad_btnAceptar" />

</LinearLayout>
