<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tituloConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/config_titulo"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/conifg_subtitulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_lenguage"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvTema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_tema"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerTema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/configBtnGuardar"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/iconosave"
        android:onClick="guardar"
        android:text="@string/config_btnGuardar"
        android:textSize="15sp" />

</LinearLayout>
